<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AuthActivity"
    android:background="@drawable/colorbackground">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="299sp"
        android:layout_height="155sp"
        android:layout_marginTop="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/nwlogo" />

    <EditText
        android:id="@+id/email_login"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="32sp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textPersonName"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/pw_login"
        android:layout_width="300sp"
        android:layout_height="40sp"
        android:layout_marginTop="25sp"
        android:ems="10"
        android:hint="@string/hint_pw"
        android:inputType="textPassword"
        android:textColorLink="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login" />

    <Button
        android:id="@+id/login"
        android:layout_width="153sp"
        android:layout_height="47sp"
        android:layout_marginTop="40dp"
        android:background="@drawable/colorbackground"
        android:text="@string/boton_login"
        app:cornerRadius="?attr/listPreferredItemPaddingEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_login" />

    <ImageButton
        android:id="@+id/facebook_login"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginStart="81sp"
        android:layout_marginTop="56sp"
        android:layout_marginEnd="40sp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/google_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/facebook" />

    <ImageButton
        android:id="@+id/google_login"
        android:layout_width="70sp"
        android:layout_height="70sp"
        android:layout_marginTop="56sp"
        android:layout_marginEnd="81sp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/facebook_login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:srcCompat="@drawable/google" />

    <TextView
        android:id="@+id/redir_regist"
        android:layout_width="284sp"
        android:layout_height="51sp"
        android:layout_marginStart="100sp"
        android:layout_marginTop="248dp"
        android:layout_marginEnd="100sp"
        android:text="@string/redireccion_pantalla_registro"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pw_login" />

    <Button
        android:id="@+id/registrar"
        android:layout_width="153sp"
        android:layout_height="47sp"
        android:layout_marginTop="10sp"
        android:background="@drawable/colorbackground"
        android:text="@string/boton_registrar"
        app:cornerRadius="?attr/listPreferredItemPaddingEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/redir_regist" />

</androidx.constraintlayout.widget.ConstraintLayout>